# type-cli

./: .gitignore  Cargo.toml  README.md
demos/: Cargo.toml
demos/cargo-naked/: Cargo.toml
demos/cargo-naked/src/: main.rs
demos/grep-better/: Cargo.toml
demos/grep-better/src/: main.rs
demos/grep-naive/: Cargo.toml
demos/grep-naive/src/: main.rs
demos/grep-named/: Cargo.toml
demos/grep-named/src/: main.rs
demos/grep-var/: Cargo.toml
demos/grep-var/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/struct_cmd/: mod.rs  named.rs  tuple.rs
src/: args.rs  lib.rs
testing/: Cargo.toml
testing/src/: fmt.rs  lib.rs  misc.rs
tests/: Cargo.toml
tests/src/: fmt.rs  misc.rs
type-cli/: Cargo.toml
type-cli-derive/: Cargo.toml
type-cli-derive/src/: enum_cmd.rs
type-cli-derive/src/struct_cmd/: named.rs  tuple.rs
type-cli/src/: args.rs  lib.rs
