[package]
name = "type-cli-derive"
version = "0.1.0"
authors = ["joe10"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = {version = "1", features = [ "derive", "full" ] }
quote = "1"
proc-macro-crate = "0.1"
regex = "1.4"