[package]
name = "type-cli-derive"
version = "0.0.1"
authors = ["JoJoJet"]
edition = "2018"
description = "Derive macro for a convenient, type-safe CLI parser."
repository = "https://github.com/JoJoJet/type-cli"
license = "MIT"
keywords = ["cli", "command", "clap", "derive"]
categories = ["command-line interface", "command-line-interface"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = [ "derive", "full" ] }
quote = "1.0"
proc-macro-crate = "0.1"
regex = "1.4"