[package]
name = "type-cli"
version = "0.0.3"
authors = ["JoJoJet <joe102000@gmail.com>"]
edition = "2018"
description = "A convenient, strongly-typed CLI parser."
readme = "../README.md"
repository = "https://github.com/JoJoJet/type-cli"
license = "MIT"
keywords = ["cli", "command", "clap", "derive"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type-cli-derive = "0.0.1"
thiserror = "1.0"
